examples-generated/vpc/route.yaml
apiVersion: vpc.flexibleengine.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1beta1/route
  labels:
    testing.upbound.io/example-name: vpc_route
  name: vpc-route
spec:
  forProvider:
    destination: 192.168.0.0/16
    nexthop: ${var.nexthop}
    type: peering
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example

---
